Wrong color for stats headers, fixing

--- a/htdocs/main.css
+++ b/htdocs/main.css
@@ -432,7 +432,7 @@ table.data {
 }
 
 .data tr th {
-    background: #DDDDDD;
+    background: #064785;
     /* color: #CCC; */
     color: white;
     padding: 3px;
